--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/react-dom": "^18.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router-dom": "^6.14.2",
 		"react-scripts": "5.0.0",
 		"react-unity-webgl": "^9.4.2",
 		"typescript": "^4.6.4",
